--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title>@dayubadel - Sitio personal de Dayana Bailón Delgado </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="description" content="Sitio personal de Dayana Bailón desarrolladora de software de Manabí Ecuador" />
-	<meta name="keywords" content="programador en Manabí, Portafolio, página web Manabí" />
+	<meta name="keywords" content="pagina web Ecuador, Portafolio, página web Manabí" />
 	<meta name="author" content="Dayana Bailón Delgado" />
 	
 	<!--
@@ -119,12 +119,12 @@
 								<span class="link">Blog</span>
 							</a>
 						</li> -->
-						<li>
+						<!-- <li>
 							<a href="#contacts-card">
 								<span class="icon ion-at"></span>
 								<span class="link">Contacto</span>
 							</a>
-						</li>
+						</li>-->
 					</ul>
 				</div>
 
@@ -364,7 +364,7 @@
 							<div class="col col-d-3 col-t-3 col-m-6 border-line-v">
 								<div class="fuct-item">
 									<div class="icon"><span class="ion ion-disc"></span></div>
-									<div class="name">80 Albumes Listened</div>
+									<div class="name">1 000 Álbumes escuchados</div>
 								</div>
 							</div>
 
@@ -372,7 +372,7 @@
 							<div class="col col-d-3 col-t-3 col-m-6 border-line-v">
 								<div class="fuct-item">
 									<div class="icon"><span class="ion ion-trophy"></span></div>
-									<div class="name">15 Awards Won</div>
+									<div class="name">1 Premio ganado</div>
 								</div>
 							</div>
 
@@ -380,7 +380,7 @@
 							<div class="col col-d-3 col-t-3 col-m-6 border-line-v">
 								<div class="fuct-item">
 									<div class="icon"><span class="ion ion-coffee"></span></div>
-									<div class="name">1 000 Cups of coffee</div>
+									<div class="name">800 Tazas de café</div>
 								</div>
 							</div>
 
@@ -388,7 +388,7 @@
 							<div class="col col-d-3 col-t-3 col-m-6 border-line-v">
 								<div class="fuct-item">
 									<div class="icon"><span class="ion ion-flag"></span></div>
-									<div class="name">10 Countries Visited</div>
+									<div class="name">6 Provincias Visitadas</div>
 								</div>
 							</div>
 
