--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 					<div class="social">
 						<a target="_blank" href="https://twitter.com/dayubadel"><span class="fab fa-twitter"></span></a>
 						<a target="_blank" href="https://github.com/dayubadel"><span class="fab fa-github"></span></a>
-						<a target="_blank" href="https://linkedin.com/dayubadel"><span class="fab fa-linkedin"></span></a>
+						<a target="_blank" href="https://linkedin.com/in/dayubadel"><span class="fab fa-linkedin"></span></a>
 						<a target="_blank" href="https://instagram.com/dayubadel"><span class="fab fa-instagram"></span></a>
 						
 					</div>
